--- a/kubernetes-manifest/backend.yaml
+++ b/kubernetes-manifest/backend.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   replicas: 1
   strategy:
-    type: RollingUpdate
+    type: RollingUpdateogochukwuozotta
     rollingUpdate:
       maxSurge: 1
       maxUnavailable: 25%
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: ogochukwuozotta/backend-api:latest
+        image: shubzz/backend-api:latest
         ports:
         - containerPort: 3000
         env:
