--- a/kubernetes-manifest/frontend.yaml
+++ b/kubernetes-manifest/frontend.yaml
@@ -25,7 +25,7 @@ spec:
         image: ogochukwuozotta/frontend-js:latest
         env:
         - name: VITE_REACT_APP_API_URL
-          value: "http://quizapp.cloudcorehub.com/api/questions"
+          value: "http://techopsjourney.site/api/questions"
         ports:
         - containerPort: 8080
 ---
