--- a/kubernetes-manifest/backend.yaml
+++ b/kubernetes-manifest/backend.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: ogochukwuozotta/backend-api:latest
+        image: shubzz/backend-api:latest
         ports:
         - containerPort: 3000
         env:
